--- a/css/style.css
+++ b/css/style.css
@@ -1540,11 +1540,11 @@ footer {
     padding-right: 1.875rem;
 }
 
-.company-name,
+/* .company-name,
 .company-descr {
    transform: translateY(-2rem);
 }
-
+ */
 
 
 
@@ -2169,6 +2169,7 @@ footer {
     }
 
 }
+
 
 
 
